<resources>
    <string name="app_name">¡Dale un Mordisco!</string>
    <string name="title_activity_menu_principal">Menu_Principal</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_cesta">Cesta</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_configuracion">Configuracion</string>



    <!-- Detalles Producto -->
    <string name="dp_etiqPrecio">Precio (€):</string>
    <string name="dp_btnAnadirCarrito">Añadir al carrito</string>
    <string name="dp_btnRegresar">Regresar</string>

    <!-- Launch Screen -->
    <string name="ls_etiqHechoPor">Hecho por:</string>

    <!-- Login -->
    <string name="l_etiqBienvenido">¡Bienvenido a\n Dale un Mordisco!</string>
    <string name="l_etiqIniciaSesion">Inicia sesión para continuar</string>
    <string name="l_etiqEmail">Email</string>
    <string name="l_etiqPassword">Contraseña</string>
    <string name="l_btnIngresar">Ingresar</string>
    <string name="l_etiqEresNuevo">¿Eres nuevo?</string>
    <string name="l_etiqRegistrate">¡Regístrate!</string>
    <string name="l_etiqEspanol">Español</string>
    <string name="l_etiqIngles">Inglés</string>

    <!-- Registro -->
    <string name="r_etiqUneteFamilia">¡Únete a la familia!</string>
    <string name="r_etiqRegTusDatos">Registra tus datos</string>
    <string name="r_etiqNombre">Nombre</string>
    <string name="r_etiqApellido">Apellido</string>
    <string name="r_etiqEmail">Email</string>
    <string name="r_etiqPassword">Contraseña</string>
    <string name="r_etiqPassword2">Repite tu contraseña</string>
    <string name="r_btnRegistrar">Registrar</string>
    <string name="r_etiqTengoCuenta">Ya tengo cuenta</string>

    <!-- Cesta -->
    <string name="cf_etiqMiCarrrito">Mi Carrito</string>
    <string name="cf_etiqPrecioProd">Coste en productos:</string>
    <string name="cf_etiqCosteEnvio">Costes de Envío:</string>
    <string name="cf_etiqImpuestos">Impuestos:</string>
    <string name="cf_btnPagar">Pagar</string>

    <string name="cf_producto">Producto</string>
    <string name="cf_cantidad">Cantidad</string>
    <string name="cf_precio">Precio</string>
    <string name="cf_facturaDe">Factura de</string>
    <string name="cf_factura">Factura</string>

    <string name="cf_mapa">Ver tiendas físicas</string>

    <!-- Perfil -->
    <string name="pf_btnCerrarSesion">Cerrar Sesión</string>
    <string name="pf_btnEnglish">Inglés</string>
    <string name="pf_btnEspanol">Español</string>
    <string name="pf_nombre">Nombre:</string>
    <string name="pf_apellido">Apellido:</string>
    <string name="pf_email">Email:</string>
    <string name="pf_idioma">Escoge el idioma de la aplicación</string>
    <string name="pf_salir">Salir de la aplicación</string>
    <string name="pf_datosPers">Mis datos personales</string>

    <!-- Inicio -->
    <string name="if_etiqHola">Hola</string>
    <string name="if_etiqPideLoQueQuieras">Pide lo que quieras</string>

    <!-- Preferences -->
    <string name="p_etiqModoOscuro">Modo oscuro</string>
    <string name="p_etiqModoOscuroOn">Modo oscuro activado</string>
    <string name="p_etiqModoOscuroOff">Modo oscuro desactivado</string>
    <string name="p_etiqOrientacion">Orientación</string>
    <string name="p_etiqOrientacionDes">Configura la orientación de la aplicación</string>
    <string name="p_etiqGuardar">Guardar</string>
    <string name="p_etiqPantalla">Pantalla</string>
    <string name="p_etiqGuardarConfi">Guardar configuración</string>

    <!-- Toast -->
    <string name="t_ingresaNombre">Debes ingresar tu nombre</string>
    <string name="t_ingresaApellido">Debes ingresar tu apellido</string>
    <string name="t_ingresaEmail">Debes ingresar tu email</string>
    <string name="t_ingresaPassword">Debes ingresar tu contraseña</string>
    <string name="t_coincidePassword">Las contraseñas deben coincidir</string>
    <string name="t_loginIncorrecto">Email o contraseña incorrectos. Intente de nuevo</string>
    <string name="t_emailInvalido">El email ingresado es inválido</string>

    <string name="t_pedidoEliminado">El pedido se ha eliminado correctamente</string>
    <string name="t_pedidoAnadido">Tu pedido se ha añadido al carrito</string>
    <string name="t_cestaVacia">No tienes productos en la cesta</string>
    <string name="t_confirmarCompra">Compra confirmada</string>


    <string name="t_errorBBDD">Ha ocurrido un error con la base de datos</string>
    <string name="t_errorRegistro">ERROR: Este usuario ya se encuentra registrado</string>
    <string name="t_registroCompletado">Tu registro se ha realizado con éxito</string>

    <!-- Diálogo -->
    <string name="d_confirmarPedido">Confirmar pedido</string>
    <string name="d_confirmarPedidoMsg">¿Seguro que has terminado tu pedido?</string>
    <string name="d_si">Si</string>
    <string name="d_no">No</string>

    <string name="d_espera">¡Espera!</string>
    <string name="d_seguroEliminado">¿Seguro que deseas eliminar el producto de la cesta?</string>
    <string name="d_seguro">Seguro</string>
    <string name="d_meArrepiento">No, me he arrepentido</string>

    <!-- Notificación -->
    <string name="n_NotifTitulo">Compra finalizada</string>
    <string name="n_NotifContenido">Gracias por su pedido. ¿Desea la factura?</string>
    <string name="n_si">Si porfavor</string>
    <string name="n_no">No gracias</string>

    <string name="n_PNotifTitulo">Pedido listo</string>
    <string name="n_PNotifContenido">Su pedido está listo y de camino. </string>

    <!-- Productos -->
    <string name="desc_4Quesos">La pizza 4 quesos es una de las más consumidas del mundo, claro está, por los amantes del queso. Pero ojo, porque si seguimos la receta tradicional, no nos vale cualquier queso; de hecho, los cuatro quesos utilizados tienen la certificación de Denominación de Origen Protegida (DOP): El queso fontina, originario del Valle de Aosta; el queso gorgonzola, natural de Milán; el queso parmesano, originario de la ciudad de Parma; y el queso mozzarella, nacido en Campania. Con estos cuatro protagonistas tendrás entre tus manos una auténtica perdición quesera en forma de pizza. No tiene más, ni salsa de tomate ni especias, quizás un toque de pimienta negra molida.</string>
    <string name="desc_Barbacoa">Como su propio nombre indica, el ingrediente estrella de esta pizza es la salsa barbacoa o salsa BBQ. Se trata de una pizza nacida en Estados Unidos, pero que se ha convertido en la favorita de mucha gente por ser jugosa y una de las más intensas y potentes. Junto a la salsa barbacoa, la pizza barbacoa se elabora con carne picada y, a elección del comensal, con cebolla, que aporta un contraste de sabor único con el resto de ingredientes. Aunque Italia será siempre la reina de la pizza, Estados Unidos no se queda atrás en cuanto a consumo; tanto, que los norteamericanos tienen hasta su "Pizza National Day", una festividad instituida por el Congreso que se celebra el día 9 de febrero.</string>
    <string name="desc_Calzone">La calzone es una pizza especial por esconder en su interior todos sus ingredientes (queso, carne, atún, vegetales, etc.), ya que está cubierta por otra masa del mismo tamaño que la base, y en forma de empanadilla. Esta pizza envuelta, originaria de la ciudad de Puglia (Nápoles), mantiene siempre su jugosidad y, después de la pasta y la pizza clásica, se ha convertido en uno de los platos más conocidos y versionados de Italia.</string>
    <string name="desc_Diabola">No apta para los paladares más delicados, la pizza Diávola se distingue por el sabor picante de su salsa, que debe notarse en cada bocado. Pero también del resto de ingredientes, que potencian aún más ese toque ardiente: chorizo, salami, incluso chile y una cantidad generosa de queso con carácter. La versión americana de esta pizza sustituye el salami por el pepperoni, variedad del embutido italiano también picante pero con un sabor más ahumado y sazonado con pimentón o ají.</string>
    <string name="desc_Margarita">La pizza margarita es la más clásica de las pizzas italianas y la que abrió paso al resto de pizzas que posteriormente se fueron elaborando. Los ingredientes de esta pionera no fallan, y son los preferidos de los auténticos amantes de la pizza tradicional: salsa de tomate, mozzarella, albahaca, orégano y aceite de oliva. ¿A qué te recuerdan los colores de estos ingredientes? Sí, a la bandera italiana; un sabor de bandera.</string>

    <string name="desc_Vacuno">La integración de la piña con carne es más común en América que en Europa. El resultado final de tal combinación bien merece ser probado, pues aporta una jugosidad al conjunto que difícilmente se consigue con otras recetas. Algunos de sus ingredientes son: Carne ternera, Jamón serrano loncheado, Piña natural, Queso Gouda, Aceite de oliva virgen, Sal y Pimienta negra molida.</string>
    <string name="desc_Shack">Una de las hamburguesas más famosas de Nueva York. La hamburguesa clásica de Shake Shack, en presentación individual o doble. Todas las hamburguesas de este tipo son de carne de ternera y para acompañarla, las famosas patatas fritas rizadas.</string>
    <string name="desc_Clasica">Carne picada de ternera, pan humedecido en leche, huevo, tocineta de cerdo y otros condimentos constituyen la base de un excelente sabor. Esta es una hamburguesa súper jugosa que siempre va a triunfar entre quienes la prueban. Dentro de los ingredientes de esta delicia encontramos: Pan de molde, Carne de ternera, Hierbas provenzales, Mostaza de Dijon, Pimienta negra molida y aceite de oliva virgen.</string>
    <string name="desc_Ranchera">Si prefieres carnes blancas en vez de rojas, entonces puedes elegir una hamburguesa de pollo. Algunos piensan que éstas, en comparación con las de ternera, quedan demasiado "dulces" o en algunos casos incluso algo insípidas. Por eso, tienes que probar la hamburguesa de pollo a la ranchera, ya que es de todo menos dulce o sin sabor. La acompaña buena salsa de tomate y cebolla sofritos, además de unos frijoles y varias tiras de bacon.</string>

    <string name="desc_Calamares">El bocata de calamares es uno de los platos más representativos de la cocina madrileña. Junto con los callos a la madrileña y el cocido madrileño, es el mejor plato que podemos encontrar en Madrid.</string>
    <string name="desc_Mixto">El sándwich de jamón y queso a la plancha, sándwich mixto, también conocido como bikini en Catalunya, es uno de los  más populares y fáciles de preparar. Sin embargo, por más que parezca una tontería, hay muchos trucos que se esconden tras esta básica receta. Por ejemplo, lograr que el queso quede perfectamente fundido sin quemar el pan o hacer que el pan quede crujiente sin que chorree grasa ni esté aplastado como un papel de fumar.</string>

    <!-- Mapa -->
    <string name="m_PosicionActual">Tu posición actual</string>
</resources>