<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cesta.CestaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cf_etiqMiCarrrito"
                android:layout_marginTop="32dp"
                android:background="@color/rosa"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lista_carrito"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cf_etiqPrecioProd"
                    android:textStyle="bold"
                    android:textColor="@color/gris_claro"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/total_prod_carrito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100€"
                    android:textStyle="bold"
                    android:textColor="@color/rosa_claro"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cf_etiqCosteEnvio"
                    android:textStyle="bold"
                    android:textColor="@color/gris_claro"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/total_envio_carrito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3€"
                    android:textStyle="bold"
                    android:textColor="@color/rosa_claro"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cf_etiqImpuestos"
                    android:textStyle="bold"
                    android:textColor="@color/gris_claro"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/total_impuesto_carrito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10€"
                    android:textStyle="bold"
                    android:textColor="@color/rosa_claro"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@color/rosa"
                android:textSize="5sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Total:"
                    android:textStyle="bold"
                    android:textColor="@color/rosa"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/total_carrito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="113€"
                    android:textStyle="bold"
                    android:textColor="@color/rosa_claro"
                    android:textSize="30sp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pagar_carrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:onClick="terminarCompras"
                android:text="@string/cf_btnPagar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>